--- a/signin.html
+++ b/signin.html
@@ -487,7 +487,7 @@
                 })
                 .then(() => {
                     statusMsg.classList.remove('status-active');
-                    window.location.href = "homepage.html";
+                    window.location.href = "home.html";
                 })
                 .catch((error) => {
                     statusMsg.innerText = "Harsatna: " + error.code;
