--- a/home.html
+++ b/home.html
@@ -580,7 +580,7 @@
             <span class="logo-text">Zo-Tinder</span>
         </div>
         <div class="header-actions">
-            <button class="icon-btn" onclick="location.href='notification.html'">🌟</button>
+            <button class="icon-btn" onclick="location.href='notify.html'">🌟</button>
             <button class="icon-btn" onclick="location.href='settings.html'">📱</button>
         </div>
     </header>
@@ -589,7 +589,7 @@
     <nav class="top-nav">
         <button class="active">Discover</button>
         <button onclick="location.href='group.html'">Group</button>
-        <button onclick="location.href='leaderboard.html'">Leaderboard</button>
+        <button onclick="location.href='battle-leaderboard.html'">Leaderboard</button>
     </nav>
 
     <!-- ── MAIN ── -->
