--- a/photo-battle.html
+++ b/photo-battle.html
@@ -568,6 +568,6 @@
         </div>
     </div>
 
-    <script type="module" src="battle_logic.js"></script>
+    <script type="module" src="battle.js"></script>
 </body>
 </html>
