--- a/group.html
+++ b/group.html
@@ -753,11 +753,11 @@
 
 <!-- FOOTER -->
 <footer class="footer">
-    <button class="foot-btn" id="foot-home" onclick="navigateTo('home')">🔥<div class="foot-dot"></div></button>
-    <button class="foot-btn" id="foot-store" onclick="navigateTo('store')">🛍️<div class="foot-dot"></div></button>
-    <button class="foot-btn" id="foot-battle" onclick="navigateTo('battle')">⚔️<div class="foot-dot"></div></button>
-    <button class="foot-btn active" id="foot-groups">🪩<div class="foot-dot"></div></button>
-    <button class="foot-btn" id="foot-profile" onclick="navigateTo('profile')">🪪<div class="foot-dot"></div></button>
+<button class="foot-btn" id="foot-home" onclick="window.location.href='home.html'">🔥<div class="foot-dot"></div></button>
+<button class="foot-btn" id="foot-store" onclick="window.location.href='store.html'">🛍️<div class="foot-dot"></div></button>
+<button class="foot-btn" id="foot-battle" onclick="window.location.href='photo-battle.html'">⚔️<div class="foot-dot"></div></button>
+<button class="foot-btn active" id="foot-groups">🪩<div class="foot-dot"></div></button>
+<button class="foot-btn" id="foot-profile" onclick="window.location.href='profile.html'">🪪<div class="foot-dot"></div></button>
 </footer>
 
 <!-- ══ CONTEXT MENU ══ -->
